resources/2021-11-30-traefik-tailscale-proxy/letsencrypt/01-edge/ext-service-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-demo-https
  namespace: traefik-system
spec:
  externalName: traefik-demo.local.10.73.135.123.sslip.io
  type: ExternalName
  ports:
  - port: 443
    name: https
